tests/baselines/reference/tsxErrorRecovery1.errors.txt
tests/cases/conformance/jsx/file.tsx(4,11): error TS17008: JSX element 'div' has no corresponding closing tag.
tests/cases/conformance/jsx/file.tsx(4,19): error TS1109: Expression expected.
tests/cases/conformance/jsx/file.tsx(7,11): error TS2304: Cannot find name 'a'.
tests/cases/conformance/jsx/file.tsx(7,12): error TS1005: '}' expected.
tests/cases/conformance/jsx/file.tsx(8,1): error TS1005: '</' expected.


==== tests/cases/conformance/jsx/file.tsx (5 errors) ====
    declare namespace JSX { interface Element { } }
    
    function foo() {
    	var x = <div>  { </div>
    	         ~~~
!!! error TS17008: JSX element 'div' has no corresponding closing tag.
    	                 ~~
!!! error TS1109: Expression expected.
    }
    // Shouldn't see any errors down here
    var y = { a: 1 };
              ~
!!! error TS2304: Cannot find name 'a'.
               ~
!!! error TS1005: '}' expected.
    
    
!!! error TS1005: '</' expected.